docker/helm/kibana/ingress-config.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: opendistro-kibana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: opendistro-kibana
          servicePort: 5601
